# sschool-design-pipeline

./: .gitignore  README.md  SchoolDesignPipeline.spec  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  main.py
app/config/: defaults.yaml  manager.py
app/controller/: __init__.py  app_controller.py  batch.py  progress.py  project_manager.py
app/data/: __init__.py  models.py  serialization.py
app/engine/: __init__.py  assets.py  colors.py  csv_importer.py  flexible_registration.py  image_engine.py  initials.py  migration.py  operations.py  registration.py  tabular_importer.py  templates.py  typography.py
app/export/: __init__.py  exporter.py  reports.py
app/plugins/: __init__.py  api.py  manager.py
app/qa/: __init__.py  rules.py  service.py
app/ui/: flexible_registration.py  main_window.py  models.py  operation_editor.py  preview.py  registration.py  settings.py
app/utils/: __init__.py  errors.py  logging.py  paths.py
docs/: ADMINISTRATOR_GUIDE.md  BUILD.md  DEVELOPER_API.md  SELF_REVIEW.md  TRACEABILITY.md  USER_MANUAL.md
installer/: SchoolDesignPipeline.iss
sample_project/: color_library.yaml
sample_project/input/: schools.csv
sample_project/template/: template.yaml
scripts/: build.ps1
tests/: conftest.py
tests/golden/: test_locked_regions.py
tests/integration/: test_batch_pipeline.py  test_flexible_collection.py  test_reprocess_failed.py  test_resume_project.py
tests/system/: test_sample_project_acceptance.py
tests/ui/: test_dialog_smoke.py  test_main_window_smoke.py  test_operation_editor.py  (+1 more)
(+26 files in other folders)
