[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "school-design-pipeline"
version = "0.1.0"
description = "Deterministic Windows desktop template editing pipeline for school apparel artwork."
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "School Design Pipeline" }]
dependencies = [
  "PySide6>=6.8",
  "Pillow>=10.4",
  "opencv-python>=4.10",
  "numpy>=2.0",
  "pandas>=2.2",
  "PyYAML>=6.0",
  "CairoSVG>=2.7",
  "pyinstaller>=6.10",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

